# catalytic

./: Cargo.toml
.github/workflows/: scylla.yml
catalytic/: Cargo.toml
catalytic/src/: lib.rs  query_transform.rs  runtime.rs  sort.rs  table_metadata.rs
catalytic_macro/: Cargo.toml
catalytic_macro/src/: json.rs
catalytic_query_parser/: Cargo.toml
catalytic_query_parser/src/: extract_query_metadata.rs
catalytic_table_to_struct/: Cargo.toml
catalytic_table_to_struct/example/: Cargo.toml  build.rs
catalytic_table_to_struct/example/src/: lib.rs
catalytic_table_to_struct/example/src/non_compiling_code/: failing_wrong_type_primitive.stderr  failing_wrong_type_vec.stderr
catalytic_table_to_struct/src/: column_mapper.rs
