[workspace]
members = [
    "catalytic",
    "catalytic_table_to_struct",
    "catalytic_table_to_struct/example",
    "catalytic_macro",
    "catalytic_query_parser",
]
resolver = "2"

[workspace.package]
edition = "2021"
version = "0.1.24" # When bumping this version, cargo publish in this order: table_to_struct -> query_parser -> macro -> catalytic
authors = ["Jasper Visser <jasperav@hotmail.com>"]
repository = "https://github.com/Jasperav/catalytic"
readme = "./README.md"
keywords = ["database", "scylla", "cql", "cassandra"]
categories = ["database"]
license = "MIT"

[workspace.dependencies]
scylla = "0.14.0" # This crate is specifically build for this version
once_cell = "1.20.2"
heck = "0.5.0"
tokio = { version = "1.40.0", features = ["time", "rt-multi-thread", "io-util"] }
thiserror = "1.0.64"
futures-util = "0.3.31"
syn = { version = "2.0.82", features = ["full", "extra-traits"] }
quote = "1.0.37"
proc-macro2 = "1.0.88"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.132"
proc_macro2_helper = "0.2"
uuid = "1.11.0"
regex = "1.11.0"
tracing = "0.1"
tracing-subscriber = "0.3"
trybuild = "1.0.101"
dotenvy = "0.15"
serial_test = "3.1.1"